java 17 compatibilities improvement and logback added with TLoggerUtil helper class