@@ -1,16 +1,17 @@
 package org.tedros.fx.layout;
 
+import java.lang.reflect.InvocationTargetException;
+
 import org.tedros.fx.domain.TLayoutType;
+import org.tedros.util.TLoggerUtil;
 
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.Group;
 import javafx.scene.Node;
 import javafx.scene.control.Label;
-import javafx.scene.control.LabelBuilder;
 import javafx.scene.layout.FlowPane;
 import javafx.scene.layout.HBox;
-import javafx.scene.layout.HBoxBuilder;
 import javafx.scene.layout.Pane;
 import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
@@ -38,8 +39,12 @@ public class TFieldSet extends StackPane {
     }
     
     public void tAddLegend(String legend){
-    	legendLabel = LabelBuilder.create().text(legend).id("t-fieldset-legend").build();
-    	legendBox = HBoxBuilder.create().children(legendLabel).id("t-fieldset-legend-pane").build();
+    	legendLabel = new Label();
+    	legendLabel.setText(legend);
+    	legendLabel.setId("t-fieldset-legend");
+    	legendBox = new HBox();
+    	legendBox.getChildren().add(legendLabel);
+    	legendBox.setId("t-fieldset-legend-pane");
     	HBox.setMargin(legendLabel, new Insets(4,10,0,10));
     	legendBox.setPadding(new Insets(0,0,5,0));
     	configLegendBox(legendBox);
@@ -89,7 +94,7 @@ public class TFieldSet extends StackPane {
 		if(contentBox!=null)
 			return;
 		try {
-			contentBox = layoutType==null ? new VBox() : layoutType.getValue().newInstance();
+			contentBox = layoutType==null ? new VBox() : layoutType.getValue().getDeclaredConstructor().newInstance();
 			contentBox.autosize();
 			if(contentBox instanceof FlowPane){
 				FlowPane pane = (FlowPane) contentBox;
@@ -100,8 +105,9 @@ public class TFieldSet extends StackPane {
 			
 			contentBox.setId("t-fieldset-content-pane");
 			contentPane.getChildren().add(contentBox);
-		} catch (InstantiationException | IllegalAccessException e) {
-			e.printStackTrace();
+		} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException 
+				| NoSuchMethodException | SecurityException e) {
+			TLoggerUtil.error(getClass(), e.getMessage(), e);
 		}
 		
 	}
@@ -114,8 +120,7 @@ public class TFieldSet extends StackPane {
     	super.setPadding(new Insets(10,0,0,0));
         super.setAlignment(Pos.TOP_LEFT);
         super.getStyleClass().add("fieldSetDefault");
-        
-        //contentBox.getStyleClass().add("fieldSet");
+       
         contentPane.setId("t-fieldset");
         contentPane.setAlignment(Pos.TOP_LEFT);
         contentPane.setPadding(new Insets(20, 10, 10, 10));
@@ -128,23 +133,8 @@ public class TFieldSet extends StackPane {
         gp.getChildren().add(legendPane);
         
         super.getChildren().addAll(contentPane, gp);
-        settBackGroundColor("transparent");
+        settBackGroundColor("transparent");       
         
-        /* Adding listeners for styles. */
-        /*getStyleClass().addListener(new ListChangeListener<String>() {
-                @Override
-                public void onChanged(javafx.collections.ListChangeListener.Change<? extends String> paramChange) {
-                        System.out.println("-->"+getStyleClass());
-                        System.out.println(contentPane.getStyleClass());
-                        contentPane.getStyleClass().clear();
-                        contentPane.getStyleClass().addAll("fieldSet");
-                        for (String clazz : getStyleClass()) {
-                                if (!clazz.equals("fieldSetDefault")) {
-                                        contentPane.getStyleClass().add(clazz);
-                                }
-                        }
-                }
-        });*/
     }
     
 }
